--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <div id="main-content">
             About me blurb
         </div>
-        <div id="copyright">
+        <div id="footer">
             &#169; Copyright 2017 Fahad Rahman
         </div>
     </div>
 
     <script>
-        document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] +
+        document.write('<script src="http://' + (location.host || 'lPocalhost').split(':')[0] +
             ':35729/livereload.js?snipver=1"></' + 'script>')
     </script>
 </body>
